Fix spacing between comments.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,6 +147,8 @@ blockquote {
 }
 
 .comment {
+  margin-bottom: 15px;
+  
   .details {
     .name {
       display: block;
